[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/HUD/MiniMapa/MiniMapa.png" type="Texture" id=1]
[ext_resource path="res://Juego/HUD/MiniMapa/Iconos/mmPlayer.png" type="Texture" id=2]
[ext_resource path="res://Juego/HUD/MiniMapa/Minimapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/HUD/MiniMapa/Iconos/mmEstacionRecarga.png" type="Texture" id=4]
[ext_resource path="res://Juego/HUD/MiniMapa/Iconos/mmBaseEnemiga2.png" type="Texture" id=5]
[ext_resource path="res://Juego/HUD/MiniMapa/Iconos/mmRele.png" type="Texture" id=6]
[ext_resource path="res://Juego/HUD/MiniMapa/Iconos/mmInterceptor.png" type="Texture" id=7]

[node name="Minimapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -162.0
margin_right = 144.0
rect_min_size = Vector2( 288, 162 )
script = ExtResource( 3 )

[node name="CuadroMinimapa" type="NinePatchRect" parent="."]
margin_right = 288.0
margin_bottom = 162.0
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMinimapa"]
anchor_left = 0.016
anchor_top = 0.035
anchor_right = 0.983
anchor_bottom = 0.977
margin_left = -4.608
margin_top = -5.67
margin_right = 4.896
margin_bottom = 3.726

[node name="ZonaRenderizadoMinimapa" type="TextureRect" parent="CuadroMinimapa/ContenedorIconos"]
margin_right = 288.0
margin_bottom = 162.0

[node name="IPlayer" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
position = Vector2( 131, 81 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IBaseEnemiga" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 0.956863, 0.0705882, 0.0705882, 1 )
position = Vector2( 139, 129 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="IEstacion" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 0.639216, 0.0862745, 0.529412, 1 )
position = Vector2( 226, 86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="IInterceptor" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 0.639216, 0.0862745, 0.529412, 1 )
position = Vector2( 226, 86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="IRele" type="Sprite" parent="CuadroMinimapa/ContenedorIconos/ZonaRenderizadoMinimapa"]
visible = false
modulate = Color( 0.639216, 0.0862745, 0.529412, 1 )
position = Vector2( 226, 86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="TweenInvisibilidad" type="Tween" parent="."]

[node name="TimerInvisibilidad" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerInvisibilidad" to="." method="_on_TimerInvisibilidad_timeout"]
